...
    <string name="err_no_reviews">No Reviews Found for this Movie</string>
    <string name="err_no_videos">No Videos Found for this Movie</string>
    <string name="err_default">Error! Something went wrong</string>
    <string name="videos">Related Videos</string>
    <string name="reviews">Reviews</string>

    <string name="tab_title_now_playing">Now Playing</string>
    <string name="tab_title_popular">Popular</string>
    <string name="tab_title_top_rated">Top Rated</string>
    <string name="tab_title_search">Search</string>
    <string name="tab_title_favourites">Favourites</string>
    <!--string name="main_poster_transition_name">main_poster_shared_transition</string-->
    <string name="synopsis">Synopsis</string>
    <string name="err_no_internet">No Internet Connection</string>
    <string name="err_img_load">Unable to load image. Please try again</string>
    <string name="no_favourites">No Movie Marked as Favourite Yet!</string>
    <string name="undo">UNDO</string>
...
    <string name="coming_soon">Coming Soon…</string>
    <string name="search_for_movie">Search for Movies</string>
    <string name="no_movies_found">No Movies Found</string>
    <string name="search_movie">Search Movie</string>

    <!-- Login Activity -->
    <string name="email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="err_login">Email or Password doesn\'t match</string>
    <string name="err_blank_email">Email must not be left blank</string>
    <string name="err_invalid_email">Please enter a valid email</string>
    <string name="err_password">Please enter your password</string>
    <string name="err_offline">You are offline!</string>

...
    <string name="reset_password">Reset Password</string>
    <string name="err_send_verification_failed">Failed to send verification Email! Please make sure that you have entered the correct email of associated with your account and try again</string>
    <string name="err_email_send">Failed to send verification Email! Please try again</string>
    <string name="err_indexing_failed">Error! Indexing search profile failed. Please try again</string>

    <!-- Sign Up Activity -->
    <string name="sign_up_message">Sign Up</string>
    <string name="login_as_guest">Login as Guest</string>
    <string name="full_name">Full Name</string>
    <string name="height_desc">Height in centimeters</string>
    <string name="weight_desc">Weight in kilograms</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_up_information">Sign Up</string>
    <string name="sign_up_desc">Create your Filmibeat account. It\'s free</string>
...
    <string name="remove_operation">removed</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="company_logo">Company Logo</string>
    <string name="companies">Production Companies</string>
    <string name="guest">Guest</string>
    <string name="profile">Profile</string>
    <string name="favourite_movies">Favourite Movies</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">Signed Out</string>
    <string name="err_load_failed_default">Failed to Load Data. Please check your internet connection and try again</string>
    <string name="err_unable_to_fetch">Error! Unable to fetch profile details. Please check your internet connection and try again</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="uploading_dp">Uploading Photo…</string>
    <string name="err_upload_failed">Error! Upload Failed</string>
    <string name="saved">Saved</string>
    <string name="save">Save</string>
    <string name="not_saved">Not Saved!</string>
    <string name="pick_photo">Pick a Photo</string>
...
