...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/login_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/default_margin"
            android:fontFamily="@font/muli_extra_bold"
            android:gravity="center"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_textView"
            tools:text="@string/err_login" />

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/tv_powered_by"
...
                android:paddingBottom="2dp"
                android:textColorHint="@color/colorTextLightGrey"
                app:hintTextColor="@color/colorVioletLight"
                app:errorEnabled="true">

                <arunkbabu90.popmovies.ui.view.CustomInputTextField
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="email"
                    android:focusable="true"
                    android:fontFamily="@font/muli_light"
                    android:hint="@string/email"
...
                android:paddingBottom="2dp"
                android:textColorHint="@color/colorTextLightGrey"
                app:hintTextColor="@color/colorVioletLight"
                app:errorEnabled="true">

                <arunkbabu90.popmovies.ui.view.CustomInputTextField
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="password"
                    android:focusable="true"
                    android:fontFamily="@font/muli_light"
                    android:hint="@string/prompt_password"
...
                    android:paddingTop="2dp"
                    android:selectAllOnFocus="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Login Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/Theme.PopMovies.LoginButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/huge_margin"
                android:layout_marginTop="@dimen/huge_margin"
...
                android:stateListAnimator="@null"
                android:text="@string/login"
                android:translationZ="5dp" />

            <!-- Forgot Password -->
            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/default_margin"
...
                android:padding="@dimen/default_padding"
                android:text="@string/forgot_password"
                android:textColor="@color/colorBlue" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:fontFamily="@font/muli_light"
            android:gravity="center"
            android:onClick="onSignUpTextViewClick"
...
            android:textColor="@color/colorBlue"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_layout" />

        <TextView
            android:id="@+id/tv_login_guest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:fontFamily="@font/muli_light"
            android:gravity="center"
            android:onClick="onLoginGuestClick"
...
