...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlackBackground"
    tools:context=".ui.activity.ProfileActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_profile_dp"
        android:layout_width="@dimen/dp_image_view_size_large"
        android:layout_height="@dimen/dp_image_view_size_large"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginTop="100dp"
        android:scaleType="centerCrop"
...
        app:layout_constraintTop_toTopOf="@id/iv_profile_dp"
        app:layout_constraintStart_toStartOf="@id/iv_profile_dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_profile_dp"
        app:layout_constraintEnd_toEndOf="@id/iv_profile_dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_doc_profile_dp_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit"
        app:fabSize="mini"
        app:backgroundTint="@color/colorGreen"
        app:layout_constraintHorizontal_bias="0.95"
...
        app:layout_constraintBottom_toBottomOf="@id/rv_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rv_profile" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/sign_out"
...
